--- a/android/NotificationTest/AndroidManifest.xml
+++ b/android/NotificationTest/AndroidManifest.xml
@@ -45,8 +45,8 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         
-		<meta-data android:name="PW_APPID" android:value="C90F5-1B040" />
-		<meta-data android:name="PW_PROJECT_ID" android:value="A1015238653572" />
+		<meta-data android:name="PW_APPID" android:value="PW APPLICATION CODE" />
+		<meta-data android:name="PW_PROJECT_ID" android:value="PW_PROJECT_ID" />
 		
         <activity
             android:name="com.example.notificationtest.MainActivity"
